--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!--John Sheriff-->
 		<meta charset="utf-8">
+		<meta name="discription" content="baking Website">
+		<meta name="keywords" content="Baking, Store, Pastries">
+		<meta name="author" content="John Sheriff">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
 	</head>
@@ -20,6 +25,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="/images/cafe-counter.jpg" alt="cafe-counter">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
