--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
-
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon.ico" type="/x-icon">
 	</head>
 	<body>
 		<header>
